welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:9: error: ';' expected but 'for' found.
  droite()for (compteur<-1 to 8) {
          ^Runner:12: error: ';' expected but 'for' found.
  droite()for (compteur<-1 to 8) {
          ^